--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "body-parser": "^1.19.0",
     "exif-js": "^2.3.0",
     "exif-parser": "^0.1.12",
+    "exifr": "^7.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "ts-exif-parser": "^0.2.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
