--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DATABASE_USER=root
+DATABASE_USER=postgres
 DATABASE_PASSWORD=password
-DATABASE_PORT=3306
+DATABASE_PORT=5432
 DATABASE_HOST=localhost
 DATABASE_NAME=gallery_map
