--- a/release.env
+++ b/release.env
@@ -4,4 +4,8 @@ DATABASE_PORT=5432
 DATABASE_HOST=172.31.54.59
 DATABASE_NAME=gallery_map
 
+AWS_S3_BUCKET_NAME=gallery-map
+AWS_ACCESS_KEY_ID=AKIAXG5B3XG3R5QZN3MJ
+AWS_SECRET_ACCESS_KEY=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
+
 TZ=Asia/Seoul
