--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.9",
     "@nestjs/typeorm": "^8.0.1",
-    "@types/multer": "^1.4.7",
+    "aws-sdk": "^2.987.0",
     "body-parser": "^1.19.0",
     "exif-js": "^2.3.0",
     "exif-parser": "^0.1.12",
     "exifr": "^7.1.2",
+    "multer": "^1.4.3",
+    "multer-s3": "^2.9.0",
     "mysql2": "^2.2.5",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
@@ -48,6 +50,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
